--- a/Cadastro.html
+++ b/Cadastro.html
@@ -11,6 +11,7 @@
 </head>
 <div class="titulo text-info">
 <H1>Cadastro do Perfil do Estudante</H1>
+<img src="Imagens\user.png" height="20%" width="20%" alt="">
 </div>
 <body>
 
