--- a/Cadastro.html
+++ b/Cadastro.html
@@ -42,7 +42,7 @@
     </div>       
     <div class="col-sm">
       <label for="Data de nascimento">Data de nascimento</label>
-      <input type="text" class="form-control" placeholder="dd/mm/aaaa" aria-label="Data de nascimento" required>
+      <input type="date" class="form-control" placeholder="dd/mm/aaaa" aria-label="Data de nascimento" required>
     </div>
   </div>
 
