atualização 3: terceira revisão

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -91,22 +91,22 @@
 
   <div class="col-sm">
     <label for="motivo">Por qual motivo você escolheu se matricular em um curso do Senac RJ?</label>
-    <textarea rows="5" type="text" class="form-control" placeholder="Informe o motivo" aria-label="motivo" required></textarea>
+    <textarea rows="5" type="text" id="textarea" class="form-control" placeholder="Informe o motivo" aria-label="motivo" required></textarea>
   </div>
 
   <div class="col-sm">
     <label for="motivo">O que te levou a escolher este curso?</label>
-    <textarea rows="5" type="text" class="form-control" placeholder="Informe o motivo" aria-label="motivo" required></textarea>
+    <textarea rows="5" type="text" id="textarea" class="form-control" placeholder="Informe o motivo" aria-label="motivo" required></textarea>
   </div>
 
   <div>
     <label for="XP">Você tem experiência na área profissional do curso?</label>
-    <textarea rows="5" type="text" class="form-control" placeholder="Informe a sua experiência" aria-label="XP" required></textarea>
+    <textarea rows="5" type="text" id="textarea" class="form-control" placeholder="Informe a sua experiência" aria-label="XP" required></textarea>
   </div>
   
   <div>
     <label for="Expectativas">Quais são as suas expectativas após a conclusão do curso?</label>
-    <textarea rows="5" type="text" class="form-control" placeholder="Informe a sua expectativa" aria-label="expectativa" required></textarea>
+    <textarea rows="5" type="text" id="textarea" class="form-control" placeholder="Informe a sua expectativa" aria-label="expectativa" required></textarea>
   </div>
   <!-- Botão Cadastrar -->
   <button class="btn btn-outline-primary" type="submit">Cadastrar</button>
