--- a/Cadastro.html
+++ b/Cadastro.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="Cadastro.css">
 
-    <title>Document</title>
+    <title>Cadastro</title>
 </head>
 <div class="titulo text-info">
 <H1>Cadastro do Perfil do Estudante</H1>
@@ -35,6 +35,38 @@
     <div class="col-sm-7">
       <label for="email">E-mail</label>
       <input type="email" class="form-control" placeholder="E-mail" aria-label="E-mail" required>
+<Form Cadastro>
+    
+    <div class="mb-3">
+        <label for="formFile" class="form-label"></label>
+        <input class="form-control" type="file" id="formFile">
+      </div>
+      <div class="col-sm">
+          <label for="CPF">CPF</label>
+        <input type="text" class="form-control" placeholder="CPF" aria-label="CPF" required>
+    </div> 
+    <div class="col-sm">
+        <label for="Nome">Nome Completo</label>
+        <input type="text" class="form-control" placeholder="Nome Completo" aria-label="Nome Completo" required>
+    </div>
+      <div class="row g-3">
+        <div class="col-sm-7">
+            <label for="email">E-mail</label>
+          <input type="email" class="form-control" placeholder="E-mail" aria-label="E-mail" required>
+        </div>
+        <div class="col-sm">
+            <label for="tel">Telefone</label>
+          <input type="text" class="form-control" placeholder="Telefone" aria-label="Telefone" required>
+        </div>
+                  
+        <div class="col-sm">
+            <label for="Data de nascimento">Data de nascimento</label>
+          <input type="text" class="form-control" placeholder="dd/mm/aaaa" aria-label="Data de nascimento" required>
+        </div>
+      </div>
+    <div class="col-sm">
+        <label for="endereco">Endereço</label>
+        <input type="text" class="form-control" placeholder="Endereço" aria-label="Endereço" required>
     </div>
     <div class="col-sm">
       <label for="tel">Telefone</label>
