--- a/Home.html
+++ b/Home.html
@@ -9,25 +9,19 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="container2">
-    <li>
-    <figure>  
-    <img src="Imagens\cadastro.jpg" width="20%" height="20%" alt="">
-    <figcaption>Cadastrar alunos</figcaption>  
-    </figure>
-    </li>
-    <li>
-    <figure>
-    <img src="Imagens\listar.jpg" width="25%" height="25%" alt="">
-    <figcaption>Listar alunos</figcaption> 
-    </figure>
-    </li>    
-    <li>    
-    <figure>
-    <img src="Imagens\login.png" width="20%" height="20%" alt="">
-    <figcaption>Acesso ao sistema</figcaption>
-    </figure>  
-    </li>    
-    </div>
+
+<div class="container">
+<a href="cadastro.php">  <img src="Imagens\cadastro 1.png" class="" alt="..." > <h2>Cadastrar aluno</h2> </a>
+
+<a href="estudantes.php"> <img src="Imagens\listar 1.png" class="" alt="...">  <h2>Listar estudantes</h2> </a>
+
+<a href="CadastroFuncionario.php"> <img src="Imagens\login 1.png" class="" alt="..."> <h2>Login/Cadastro</h2>  </a>
+
+</div>
+
+<div class="legenda">
+
+</div>
+
 </body>
 </html>
