--- a/Home.html
+++ b/Home.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/cadastro.css">
-    <title>Home</title>
+
+    <title>Layout Responsivo</title>
+
+    <link rel="stylesheet" href="css\cadastro.css">
 </head>
 <body>
-
-<div class="container">
-<a href="cadastro.php">  <img src="Imagens\cadastro 1.png" class="" alt="..." > <h2>Cadastrar aluno</h2> </a>
-
-<a href="estudantes.php"> <img src="Imagens\listar 1.png" class="" alt="...">  <h2>Listar estudantes</h2> </a>
-
-<a href="CadastroFuncionario.php"> <img src="Imagens\login 1.png" class="" alt="..."> <h2>Login/Cadastro</h2>  </a>
-
-</div>
-
-<div class="legenda">
-
-</div>
-
+    <div class="navbar">
+    <nav class="navbar navbar-light">
+        <div class="container-fluid">
+                        
+            <button type="button" class="btn btn-outline-danger">Sair</button> 
+                        
+        </div>
+      </nav>
+    </div>
+    <div class="menu">
+        <div class="example-item example-item_1"> <a href="Aluno_funcionario.html"> <img src="Imagens/cadastro 1.png"></a> Cadastro  </div>
+        <div class="example-item example-item_2"> <a href="estudantes.php"> <img src="Imagens/listar 1.png"></a> Alunos  </div>
+        <div class="example-item example-item_3"> <a href="LoginFuncionario.php"> <img src="Imagens/login 1.png"> </a>Login </div>
+    </div>
 </body>
 </html>
